@@ -1,5 +1,7 @@
 * V1.8.7.1
-  * started new development version
+  * added ck.debug_out(i) to print dict to console
+  * fixed Warnings on Windows with Python 3.6
+  * fixed repo renewing on latest Windows (when access error to Git files)
 
 * V1.8.7 
   * fixed major bug with default license/author (to avoid crashing when adding new module)
